crates/flowscope-core/tests/snapshots/golden__golden_column_lineage_union_captures_outputs.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "UNION",
      "nodes": [
        {
          "id": "column_17365cc1224ceac1",
          "type": "column",
          "label": "name",
          "qualifiedName": "users.name"
        },
        {
          "id": "column_4e2818afb2d843ce",
          "type": "column",
          "label": "id",
          "qualifiedName": "admins.id"
        },
        {
          "id": "column_b6281afcdfda23f6",
          "type": "column",
          "label": "name"
        },
        {
          "id": "column_d72cd19b5a365f79",
          "type": "column",
          "label": "name",
          "qualifiedName": "admins.name"
        },
        {
          "id": "column_e38d78c338bac387",
          "type": "column",
          "label": "id"
        },
        {
          "id": "column_f6b363282306de23",
          "type": "column",
          "label": "id",
          "qualifiedName": "users.id"
        },
        {
          "id": "output_74d22f755ec62dbc",
          "type": "output",
          "label": "Output"
        },
        {
          "id": "table_10a0682dff76cdbc",
          "type": "table",
          "label": "users",
          "qualifiedName": "users"
        },
        {
          "id": "table_4381a9deb65a1136",
          "type": "table",
          "label": "admins",
          "qualifiedName": "admins"
        }
      ],
      "edges": [
        {
          "id": "edge_1b9821fee8e2fed3",
          "from": "output_74d22f755ec62dbc",
          "to": "column_b6281afcdfda23f6",
          "type": "ownership"
        },
        {
          "id": "edge_3a0e0d8fcf9a533c",
          "from": "table_4381a9deb65a1136",
          "to": "column_d72cd19b5a365f79",
          "type": "ownership"
        },
        {
          "id": "edge_3dcd4a29cda63cba",
          "from": "column_f6b363282306de23",
          "to": "column_e38d78c338bac387",
          "type": "data_flow"
        },
        {
          "id": "edge_9b5441461589fa16",
          "from": "output_74d22f755ec62dbc",
          "to": "column_e38d78c338bac387",
          "type": "ownership"
        },
        {
          "id": "edge_a92e0d09881d5676",
          "from": "table_10a0682dff76cdbc",
          "to": "column_f6b363282306de23",
          "type": "ownership"
        },
        {
          "id": "edge_a94848a9baeb342e",
          "from": "column_d72cd19b5a365f79",
          "to": "column_b6281afcdfda23f6",
          "type": "data_flow"
        },
        {
          "id": "edge_b7379b10575fd6a5",
          "from": "column_4e2818afb2d843ce",
          "to": "column_e38d78c338bac387",
          "type": "data_flow"
        },
        {
          "id": "edge_ca4078f641aa8fdc",
          "from": "table_10a0682dff76cdbc",
          "to": "column_17365cc1224ceac1",
          "type": "ownership"
        },
        {
          "id": "edge_e349ba22b376c234",
          "from": "column_17365cc1224ceac1",
          "to": "column_b6281afcdfda23f6",
          "type": "data_flow"
        },
        {
          "id": "edge_ef6d8b744f05c507",
          "from": "table_4381a9deb65a1136",
          "to": "column_4e2818afb2d843ce",
          "type": "ownership"
        }
      ],
      "joinCount": 0,
      "complexityScore": 10
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_1fafa75822fcf49b",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "schema": "users",
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_f6b363282306de23"
          }
        ]
      },
      {
        "id": "column_3cf9faa82a446690",
        "type": "column",
        "label": "name",
        "canonicalName": {
          "schema": "users",
          "name": "name"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_17365cc1224ceac1"
          }
        ]
      },
      {
        "id": "column_9c5f2403642b6170",
        "type": "column",
        "label": "name",
        "canonicalName": {
          "schema": "admins",
          "name": "name"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_d72cd19b5a365f79"
          }
        ]
      },
      {
        "id": "column_b6281afcdfda23f6",
        "type": "column",
        "label": "name",
        "canonicalName": {
          "name": "name"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_b6281afcdfda23f6"
          }
        ]
      },
      {
        "id": "column_c3ac9ffac8257162",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "schema": "admins",
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_4e2818afb2d843ce"
          }
        ]
      },
      {
        "id": "column_e38d78c338bac387",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_e38d78c338bac387"
          }
        ]
      },
      {
        "id": "output_74d22f755ec62dbc",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_74d22f755ec62dbc"
          }
        ]
      },
      {
        "id": "table_10a0682dff76cdbc",
        "type": "table",
        "label": "users",
        "canonicalName": {
          "name": "users"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_10a0682dff76cdbc"
          }
        ]
      },
      {
        "id": "table_4381a9deb65a1136",
        "type": "table",
        "label": "admins",
        "canonicalName": {
          "name": "admins"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_4381a9deb65a1136"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_1b9821fee8e2fed3",
        "from": "output_74d22f755ec62dbc",
        "to": "column_b6281afcdfda23f6",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_3a0e0d8fcf9a533c",
        "from": "table_4381a9deb65a1136",
        "to": "column_9c5f2403642b6170",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_3dcd4a29cda63cba",
        "from": "column_1fafa75822fcf49b",
        "to": "column_e38d78c338bac387",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_9b5441461589fa16",
        "from": "output_74d22f755ec62dbc",
        "to": "column_e38d78c338bac387",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_a92e0d09881d5676",
        "from": "table_10a0682dff76cdbc",
        "to": "column_1fafa75822fcf49b",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_a94848a9baeb342e",
        "from": "column_9c5f2403642b6170",
        "to": "column_b6281afcdfda23f6",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_b7379b10575fd6a5",
        "from": "column_c3ac9ffac8257162",
        "to": "column_e38d78c338bac387",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_ca4078f641aa8fdc",
        "from": "table_10a0682dff76cdbc",
        "to": "column_3cf9faa82a446690",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_e349ba22b376c234",
        "from": "column_3cf9faa82a446690",
        "to": "column_b6281afcdfda23f6",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_ef6d8b744f05c507",
        "from": "table_4381a9deb65a1136",
        "to": "column_c3ac9ffac8257162",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 2,
    "columnCount": 6,
    "joinCount": 0,
    "complexityScore": 10,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  }
}
