crates/flowscope-core/tests/snapshots/golden__golden_inline_select_tables_only.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "nodes": [
        {
          "id": "column_9313e55aab51e2b5",
          "type": "column",
          "label": "total_amount"
        },
        {
          "id": "column_cd29f390cdda5f9c",
          "type": "column",
          "label": "total_amount",
          "qualifiedName": "orders.total_amount"
        },
        {
          "id": "column_e38d78c338bac387",
          "type": "column",
          "label": "id"
        },
        {
          "id": "column_f6b363282306de23",
          "type": "column",
          "label": "id",
          "qualifiedName": "users.id"
        },
        {
          "id": "output_74d22f755ec62dbc",
          "type": "output",
          "label": "Output"
        },
        {
          "id": "table_10a0682dff76cdbc",
          "type": "table",
          "label": "users",
          "qualifiedName": "users"
        },
        {
          "id": "table_eaa6ebb8f158751f",
          "type": "table",
          "label": "orders",
          "qualifiedName": "orders"
        }
      ],
      "edges": [
        {
          "id": "edge_3dcd4a29cda63cba",
          "from": "column_f6b363282306de23",
          "to": "column_e38d78c338bac387",
          "type": "data_flow"
        },
        {
          "id": "edge_818d89eeb879caf6",
          "from": "column_cd29f390cdda5f9c",
          "to": "column_9313e55aab51e2b5",
          "type": "data_flow",
          "joinType": "INNER",
          "joinCondition": "u.id = o.user_id"
        },
        {
          "id": "edge_9b5441461589fa16",
          "from": "output_74d22f755ec62dbc",
          "to": "column_e38d78c338bac387",
          "type": "ownership"
        },
        {
          "id": "edge_a12016fed9425216",
          "from": "table_eaa6ebb8f158751f",
          "to": "column_cd29f390cdda5f9c",
          "type": "ownership"
        },
        {
          "id": "edge_a92e0d09881d5676",
          "from": "table_10a0682dff76cdbc",
          "to": "column_f6b363282306de23",
          "type": "ownership"
        },
        {
          "id": "edge_f331a37aefb084b8",
          "from": "output_74d22f755ec62dbc",
          "to": "column_9313e55aab51e2b5",
          "type": "ownership"
        }
      ],
      "joinCount": 1,
      "complexityScore": 20
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_1fafa75822fcf49b",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "schema": "users",
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_f6b363282306de23"
          }
        ]
      },
      {
        "id": "column_46d6a4af3105be79",
        "type": "column",
        "label": "total_amount",
        "canonicalName": {
          "schema": "orders",
          "name": "total_amount"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_cd29f390cdda5f9c"
          }
        ]
      },
      {
        "id": "column_9313e55aab51e2b5",
        "type": "column",
        "label": "total_amount",
        "canonicalName": {
          "name": "total_amount"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_9313e55aab51e2b5"
          }
        ]
      },
      {
        "id": "column_e38d78c338bac387",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_e38d78c338bac387"
          }
        ]
      },
      {
        "id": "output_74d22f755ec62dbc",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_74d22f755ec62dbc"
          }
        ]
      },
      {
        "id": "table_10a0682dff76cdbc",
        "type": "table",
        "label": "users",
        "canonicalName": {
          "name": "users"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_10a0682dff76cdbc"
          }
        ]
      },
      {
        "id": "table_eaa6ebb8f158751f",
        "type": "table",
        "label": "orders",
        "canonicalName": {
          "name": "orders"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_eaa6ebb8f158751f"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_3dcd4a29cda63cba",
        "from": "column_1fafa75822fcf49b",
        "to": "column_e38d78c338bac387",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_818d89eeb879caf6",
        "from": "column_46d6a4af3105be79",
        "to": "column_9313e55aab51e2b5",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_9b5441461589fa16",
        "from": "output_74d22f755ec62dbc",
        "to": "column_e38d78c338bac387",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_a12016fed9425216",
        "from": "table_eaa6ebb8f158751f",
        "to": "column_46d6a4af3105be79",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_a92e0d09881d5676",
        "from": "table_10a0682dff76cdbc",
        "to": "column_1fafa75822fcf49b",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_f331a37aefb084b8",
        "from": "output_74d22f755ec62dbc",
        "to": "column_9313e55aab51e2b5",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 2,
    "columnCount": 4,
    "joinCount": 1,
    "complexityScore": 20,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "name": "orders",
        "columns": [
          {
            "name": "total_amount",
            "origin": "implied"
          },
          {
            "name": "user_id",
            "origin": "implied",
            "foreignKey": {
              "table": "users",
              "column": "id"
            }
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z",
        "constraints": [
          {
            "constraintType": "foreign_key",
            "columns": [
              "user_id"
            ],
            "referencedTable": "users",
            "referencedColumns": [
              "id"
            ]
          }
        ]
      },
      {
        "name": "users",
        "columns": [
          {
            "name": "id",
            "origin": "implied",
            "foreignKey": {
              "table": "orders",
              "column": "user_id"
            }
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z",
        "constraints": [
          {
            "constraintType": "foreign_key",
            "columns": [
              "id"
            ],
            "referencedTable": "orders",
            "referencedColumns": [
              "user_id"
            ]
          }
        ]
      }
    ]
  }
}
